--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,11 @@ chardet==3.0.4
 Click==7.0
 decorator==4.4.0
 defusedxml==0.6.0
+Django==2.2.1
+django-extensions==2.1.6
+django-extra-fields==1.2.1
+django-filters==0.2.1
+djangorestframework==3.9.4
 entrypoints==0.3
 Flask==1.0.2
 httptools==0.0.13
@@ -50,6 +55,7 @@ requests==2.21.0
 sanic==19.3.1
 Send2Trash==1.5.0
 six==1.12.0
+sqlparse==0.3.0
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.2
